<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/ic_background"
android:orientation="vertical"
tools:context=".activities.SignUpActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar_sign_up_activity"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/toolbar_title_text_size"
        android:textStyle="bold" />

</androidx.appcompat.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/toolbar_sign_up_activity"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_enter_your_name...."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/authentication_description_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/tv_enter_your_name...."
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_your_name...."
            app:layout_constraintEnd_toEndOf="@+id/tv_enter_your_name....">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/edt_name_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/edt_name_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/edt_name_sign_up">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/edt_email_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/edt_email_sign_up">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintStart_toStartOf="@+id/edt_password_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/edt_password_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="400dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>